@@ -1,2 +1,3 @@
-dynamic UIOP_Factory Service_Object * TAO_Strategies:_make_TAO_UIOP_Protocol_Factory() ""
-dynamic Advanced_Resource_Factory Service_Object * TAO_Strategies:_make_TAO_Advanced_Resource_Factory () "-ORBProtocolFactory UIOP_Factory"
+dynamic SHMIOP_Factory Service_Object * TAO_Strategies:_make_TAO_SHMIOP_Protocol_Factory() ""
+dynamic Advanced_Resource_Factory Service_Object * TAO_Strategies:_make_TAO_Advanced_Resource_Factory () "-ORBProtocolFactory SHMIOP_Factory"
+
